<?xml version="1.0"?>
<package>
  <!-- name of package must match with CMakeLists.txt!!! -->
  <name>jimmy_description</name>
  <version>0.0.1</version>

  <description>
    a URDF package describing Jimmy 
  </description>

 <maintainer email="TorontoRoboticsClub@protonmail.com">
    MO
  </maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rviz</build_depend>
    <run_depend>rviz</run_depend>

  <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>

  <build_depend>urdf</build_depend>
   <run_depend>urdf</run_depend>

  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
