<?xml version="1.0"?>
<package>
  <name>jimmy_gazebo</name>
  <version>0.0.0</version>
  <description>The jimmy_gazebo package based on moorerobots.com</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="TorontoRoboticsClub@protonmail.com">MO</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
